plugins {
    id "java-library"
    id "org.openmicroscopy.project" version "5.7.2"
}

group = "org.openmicroscopy"
version = "5.7.4-SNAPSHOT"

repositories {
    mavenLocal()
    mavenCentral()
}

compileJava {
    options.release = 8
}

dependencies {
    testImplementation("org.testng:testng:7.5")
    testImplementation("jmock:jmock:1.+")
    testImplementation("com.jamonapi:jamon:2.81")

    api("org.openmicroscopy:omero-model:5.7.3")
    implementation("com.codahale.metrics:metrics-graphite:3.0.2")
    implementation("com.codahale.metrics:metrics-jvm:3.0.2")
    implementation("com.codahale.metrics:metrics-logback:3.0.2")
}

test {
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }
    // enable TestNG support (default is JUnit)
    useTestNG() {
        suites "src/test/resources/unit.testng.xml"
    }
    dependsOn cleanTest
}

// Add publish functionality
apply from: "publish.gradle"
